--- a/my-app/src/styles.module.css
+++ b/my-app/src/styles.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5%;
   justify-content: space-between;
+  flex: 1;
+  margin-left: 5%;
+  margin-right: 5%;
 }
