--- a/my-app/src/styles.module.css
+++ b/my-app/src/styles.module.css
@@ -1,9 +1,10 @@
 .playerFlexContainer {
   display: flex;
+  align-self: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  flex: 1;
+  justify-content: space-evenly;
   margin-left: 5%;
   margin-right: 5%;
+  padding-top: 20px;
 }
