--- a/my-app/src/styles.module.css
+++ b/my-app/src/styles.module.css
@@ -1,10 +1,13 @@
 .playerFlexContainer {
   display: flex;
-  align-self: flex-start;
-  flex-direction: row;
+  width: 100vw;
+  justify-content: center;
+}
+​
+.players {
+  display: flex;
   flex-wrap: wrap;
+  max-width: 690px;
+  width: 100%;
   justify-content: space-evenly;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding-top: 20px;
 }
